[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/gui/news_app.png" type="Texture" id=1]
[ext_resource path="res://content/gui/menus/NotificationOverlay.gd" type="Script" id=2]
[ext_resource path="res://assets/gui/action_button_normal.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/Consolas.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/gui/messenger_app.png" type="Texture" id=5]
[ext_resource path="res://assets/gui/citizen_app.png" type="Texture" id=6]
[ext_resource path="res://assets/gui/banking_app.png" type="Texture" id=7]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[node name="NotificationOverlay" type="Node2D"]
script = ExtResource( 2 )
news_icon = ExtResource( 1 )
bank_icon = ExtResource( 7 )
score_icon = ExtResource( 6 )
message_icon = ExtResource( 5 )
default_icon = ExtResource( 3 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 768.0
margin_bottom = 128.0
mouse_filter = 2
color = Color( 0.901961, 0.901961, 0.901961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Background"]
margin_right = 768.0
margin_bottom = 128.0
rect_min_size = Vector2( 768, 128 )
mouse_filter = 2
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Background/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 748.0
margin_bottom = 108.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IconTexture" type="TextureRect" parent="Background/MarginContainer/HBoxContainer"]
margin_right = 64.0
margin_bottom = 88.0
texture = ExtResource( 1 )
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NotificationLabel" type="RichTextLabel" parent="Background/MarginContainer/HBoxContainer"]
margin_left = 74.0
margin_right = 720.0
margin_bottom = 88.0
rect_min_size = Vector2( 646, 88 )
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "This is a Notification Message with a long text... "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_right = 768.0
margin_bottom = 128.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_colors/font_color_disabled = Color( 0.305882, 0.305882, 0.305882, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
